--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         </div>
       </section>
 
-      <div class="contacts">
+      <section class="contacts">
         <div class="container">
           <div class="contacts__inner">
             <div class="contacts__info">
@@ -302,7 +302,7 @@
             </form>
           </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -311,7 +311,7 @@
           <a class="logo" href="#">
             <img class="logo-img" src="images/logo.svg" alt="" />
           </a>
-          <div class="social">
+          <div class="social footer__social">
             <a class="social__link" href="#">
               <img
                 class="social__img"
